[add](form-name): adiciona caixa de aviso à caixa de entrada do nome

--- a/src/app/hero-form/hero-form.component.html
+++ b/src/app/hero-form/hero-form.component.html
@@ -6,7 +6,12 @@
     <section class="form-group">
         <label for="name">Nome do Herói:</label>
       <input type="text" class="form-control" id="name" required
-        [(ngModel)]="model.name" name="name">
+        [(ngModel)]="model.name" name="name" #name="ngModel">
+      <div [hidden]="name.valid || name.pristine" 
+        class="alert alert-danger">
+        Insira um nome válido!
+      </div>
+        
     </section>
 
     <!-- Alter Ego -->
